Change 660 Version ver-4_1_1_31 Java 1.5 enhancements to Aranea code (Aranea RC1)
git-svn-id: file:///root/var/svn/aranea/branches/latest@5159 baba0d3d-6527-0410-ba98-ffd8059025de